
5.1.0 -> 5.2a0:
    - rse: unbreak building without LZMAUtils library
    - jbj: add --deb:foo aliases for *.deb spewage.
    - jbj: rework :strsub find-and-replace to use mire patterns.
    - jbj: mire: add REG_NEWLINE to default regex compilation.
    - jbj: add :strsub format extension find-and-replace using posix RE's.
    - jbj: fix: reattach RPMMIRE_DEFAULT as posix regex, not strcmp, pattern.
    - jbj: lzdio: start using -llzma instead.
    - jbj: tests: add coverage for %pretrans et al scriptlets.
    - rse: upgrade the embedded lrexlib Lua library from version 2.2.0 to 2.3.0
    - rse: apply upstream vendor patches from 2008-05-08 for Lua 5.1.3
    - jbj: tests: verify upgrades using the edos-test packages.
    - jbj: parser: inherit group/summary/description if not specified in subpkg.
    - jbj: parser: permit identically named sub-pkgs with different versions.
    - jbj: parser: trim comments where it makes sense to do so.
    - jbj: tests: add check-install target to attempt --relocate install.
    - jbj: tests: enhance the devtool-sanity package with scripts and a file.
    - jbj: tests: verify -Kv output using popt.
    - jbj: tests: verify setup using --version/--querytags/--showrc.
    - jbj: display noisy getconf()/uname() info with -vv --showrc instead.
    - jbj: shorten debugging messages, --queryformat strings passed to
	headerSprintf are getting huge.
    - jbj: fix: NUL terminate dst on EXPR->ARRAY parser state transition
	(see --yum:primary.yaml spew for reproducer)
    - jbj: restore deploop diagnostic message (Kacper Kornet kornet@camk.edu.pl).
    - jbj: install rpmmtree.8, update POTFILES.in & Doxyfiles.in.
    - jbj: add %_build_iconsize macro to permit configuration.
    - jbj: trash-and-restore macro config for multiple CLI arg builds.
    - rpm.org: use same code for creating the digest object on iteration and method call,
    - jbj: rpmrepo: correct requiressqlentry tag name typo.